--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,9 @@
 {
   "semi": false,
-  "tabWidth": 2,
-  "useTabs": false,
-  "printWidth": 120,
+  "trailingComma": "es5",
   "endOfLine": "auto",
   "singleQuote": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true,
-  "arrowParens": "always"
+  "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 120
 }
