--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ant-design-vue": "^3.2.10",
     "axios": "^0.27.2",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
@@ -27,6 +28,6 @@
     "tailwindcss": "^3.1.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vue-tsc": "^0.38.4"
+    "vue-tsc": "^0.38.9"
   }
 }
