--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.44",
+    "@vuelidate/validators": "^2.0.0-alpha.31",
     "ant-design-vue": "^3.2.10",
     "axios": "^0.27.2",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3",
-    "vuelidate": "^0.7.7"
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
