--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/router.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/router.ts", "src/compositions/useFetcher.js", "src/api/index.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
